--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,16 @@ body {
     sans-serif;
 }
 
+.vimeo-wrapper {
+  width: 100vw;
+  height: 100vh;
+}
+
+.vimeo-image {
+  background-position: center top;
+  background-repeat: no-repeat;
+}
+
 a {
   color: inherit;
   text-decoration: none;
