--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,21 @@ a {
   box-sizing: border-box;
 }
 
+.video-player {
+  width: 640px;
+  margin: 0 auto;
+  text-align: center;
+}
+.video-player video {
+  width: 100%;
+}
+.video-player .controls {
+  margin-top: 20px;
+}
+.video-player .controls input[type="range"] {
+  width: 100%;
+}
+
 iframe {
   width: 100%;
   max-width: 100%;
