--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,8 @@ body {
     sans-serif;
 }
 
-.vimeo-wrapper {
+.vimeo-wrapper,
+.vimeo {
   width: 100vw;
   height: 100vh;
 }
@@ -33,6 +34,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.play-pause-custom {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  z-index: 99;
 }
 
 .video-player {
