feat: add html native video

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,19 @@ body {
     sans-serif;
 }
 
+#__next {
+  position: relative;
+}
+
+.native-video {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .vimeo-wrapper,
 .vimeo {
   width: 100vw;
